# ascii-cam

./: .gitignore  Cargo.toml  Makefile  README.md
src/: app.rs  capture.rs  color.rs  frame.rs  lib.rs  main.rs  recording.rs  render.rs  screenshot.rs  serve.rs  ui.rs
tests/: capture_behavior.rs  cli_behavior.rs  core_behavior.rs  serve_behavior.rs  ui_behavior.rs
