[package]
name = "ascii-cam"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Real-time ASCII camera for the terminal"
repository = "https://github.com/cesarferreira/ascii-cam"

[dependencies]
anyhow = "1.0"
bitflags = "2.10"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
flate2 = "1.1"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.23"
