[package]
name = "ascii-cam"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Real-time ASCII camera for the terminal"
repository = "https://github.com/cesarferreira/ascii-cam"

[features]
default = []
serve = [
    "dep:tokio",
    "dep:axum",
    "dep:tokio-stream",
    "dep:futures-util",
    "dep:serde",
]

[dependencies]
anyhow = "1.0"
bitflags = "2.10"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
flate2 = "1.1"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "sync"], optional = true }
axum = { version = "0.8", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.23"
