[package]
name = "ascii-cam"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Real-time ASCII camera for the terminal"
repository = "https://github.com/cesarferreira/ascii-cam"

[dependencies]
anyhow = "1.0"
axum = "0.8"
bitflags = "2.10"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
flate2 = "1.1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3.23"
